# pyistat

./: .gitignore  README.md  pyproject.toml  untitled0.py
pyistat/: __init__.py  _logging.py  errors.py  get.py  rate_limiter.py  search.py
tests/: all_dataflows_ISTAT.csv  test.py
